<resources>
    <string name="app_name">Dynamic Utility bill Collection</string>
    <string name="menu_name">Menu Name</string>
    <string name="member_name">Member Name</string>
    <string name="raihan_mahamud_emon">Raihan Mahamud Emon</string>
    <string name="organization">Organization</string>
    <string name="era_infotech_ltd">ERA-InfoTech Ltd</string>
    <string name="software_engineer_android_amp_ios"><![CDATA[Asst. Software Engineer]]></string>
    <string name="_01816028491"><u>01816028491</u></string>
    <string name="mobile_no_2">Mobile No-2</string>
    <string name="_01516790441"><u>01516790441</u></string>
    <string name="blogspot">Blogspot</string>
    <string name="www_emonra_blogspot_com"><u>www.emonra.blogspot.com</u></string>
    <string name="emonrait_gmail_com"><u>emonrait@gmail.com</u></string>
    <string name="gulshan_02_dhaka_1212">Gulshan-02, Dhaka-1212</string>
    <string name="facebook">Facebook</string>
    <string name="address">Address</string>
    <string name="email_id">Email</string>
    <string name="occupation">Occupation</string>
    <string name="mobile_no">Mobile No</string>
    <string name="developer_information">About Me</string>
    <string name="www_facebook_com_emon_raihan"><u>www.facebook.com/emon.raihan</u></string>
    <string name="git_link"><u>https://github.com/emonrait</u></string>
    <string name="colon">:</string>
    <string name="select_type">Select Bill Type</string>
    <string name="customer_code">Enter Customer Code</string>
    <string name="meter_no">Enter Meter No</string>
    <string name="amount">Enter Amount</string>
    <string name="proceed">Proceed</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="validate">Validate</string>
    <string name="btn_serach">Search</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="or">OR</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="bill_type">Bill Type</string>
    <string name="quantity">Amount</string>
    <string name="app_slogan">Welcome to Dynamic Utility Bill Collection</string>
    <string name="invoice_no">Enter Invoice No</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="policy_number">Enter Policy Number</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="customer_id">Enter Customer ID</string>
    <string name="about_me">About Me</string>
    <string name="internet_bill_payment">Internet Bill Payment</string>
    <string name="insurance_bill_payment">Insurance Bill Payment</string>
    <string name="bills_report">Bills Report</string>
    <string name="gas_bill_payment">Gas Bill Payment</string>
    <string name="topup">Mobile Recharge</string>
    <string name="mfs_transfer">MFS Transfer</string>
    <string name="binimoy_dashboard">Binimoy Dashboard</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="loan_dashboard">Loan Dashboard</string>
    <string name="loan_result">Loan Result</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="loan_amount_bdt">Loan Amount (BDT)</string>
    <string name="duration_months">Duration (MONTHS)</string>
    <string name="applied_for">Applied For</string>
    <string name="receiving_ac">Receiving (AC)</string>
    <string name="comfire_registration"> I agree  to the<u> Terms &amp; Conditions</u> </string>
    <string name="apply_for_loan">Apply For Loan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="approved">Approved</string>
    <string name="_50_000_00_bdt">50,000.00 BDT</string>
    <string name="source_binimoy_id">Source Binimoy ID</string>
    <string name="binimoy">\@binimoy</string>
    <string name="electricity_biill_payment">Electricity Bill Payment</string>
    <string name="pending_rtp"> Pending RTP</string>
    <string name="direct_pay">Direct Pay</string>
    <string name="request_to_pay">Request To Pay</string>
    <string name="destination_binimoy_id">Destination Binimoy ID</string>
    <string name="remarks">Enter Remarks</string>
    <string name="login_password">Enter Login Password</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="profile_management">Profile Management</string>
    <string name="additional_features">Additional Features</string>
    <string name="select_type_palli">Select Type</string>
    <string name="warning">Attention!</string>
    <string name="do_you_want_to_logout_the_application">Do you want to logout the apps?</string>
    <string name="no">Cancel</string>
    <string name="log_out_title">Logout</string>
    <string name="search_by_bill_type">Search by Bill Type</string>
    <string name="select_bill_type">Select Bill Type</string>
    <string name="close_icon">Close Icon</string>
    <string name="statement">Statement</string>
    <string name="home">Home</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="menu">Menu</string>
    <string name="select_account_no">Select Account No</string>
    <string name="btn_tap_for_balance">Tap for Balance</string>
    <string name="all_account_info"><u>All Account Info</u></string>
    <string name="welcome_welcome">Welcome</string>
    <string name="_04934008646">04934008646</string>
    <string name="english">English</string>
    <string name="bangla_bangla">Bangla</string>
    <string name="smart_app">Smart App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="popular_service">Popular Service</string>
    <string name="whats_new">Whats New?</string>
    <string name="information_service">Information Service</string>
    <string name="available_balance">Avaialable Balance</string>
    <string name="zero">0.00 BDT</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="teletalk">Teletalk</string>
    <string name="airtel">Airtel</string>
    <string name="robi">Robi</string>
    <string name="banglalink">Banglalink</string>
    <string name="gp">GP</string>
    <string name="mfs_no">Enter Destination bKash No</string>
</resources>