<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item

        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />


    <item

        android:id="@+id/navigation_statement"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/statement" />


    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_beneficiary"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/beneficiary" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu" />
</menu>