<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/account_input_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/margin_10"
            android:visibility="visible"
            app:cardElevation="@dimen/margin_10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_input_layout_left_size"
                android:layout_marginTop="@dimen/text_input_layout_top_size"
                android:layout_marginEnd="@dimen/text_input_layout_right_size"
                android:layout_marginBottom="@dimen/text_input_layout_bottom_size"
                android:hint="@string/select_account_no"
                android:padding="@dimen/padding_5">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/sp_account_value"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height_size"
                    android:clickable="false"
                    android:inputType="none"
                    android:longClickable="false"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingTop="@dimen/padding_5"
                    android:paddingEnd="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_base" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/hide_layout_size_base"
                android:visibility="gone"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@drawable/linear_layout_bottom_round"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_available_balance_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/input_padding_letf_base"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_10"
                    android:text="@string/available_balance"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_base" />

                <TextView
                    android:id="@+id/tv_available_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingRight="@dimen/padding_5"
                    android:paddingBottom="@dimen/margin_10"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_base" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</LinearLayout>