<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin_15"
        app:cardCornerRadius="@dimen/margin_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/select_bill_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/close_icon"
                    android:gravity="end"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/customer_code_input_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/margin_10"
                    android:visibility="visible"
                    app:cardElevation="@dimen/margin_10">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/customer_code_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/text_input_layout_top_size"
                        android:layout_marginBottom="@dimen/text_input_layout_bottom_size"
                        android:hint="@string/search_by_bill_type"
                        android:padding="@dimen/padding_5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_bill_type_value"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/input_field_height_size"
                            android:drawableEnd="@drawable/ic_search"
                            android:inputType="text"
                            android:padding="@dimen/padding_5"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_base" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dropdown_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
