<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.welcome.binimoy.BinimoyDashboard">

    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/header_layout_toolbar" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_layout"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="5dp"
                android:text="@string/fund_transfer"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_base"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/menuGridView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:horizontalSpacing="@dimen/margin_1"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="@dimen/margin_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grid_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/profile_management"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_base"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/menuGridViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:horizontalSpacing="@dimen/margin_1"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="@dimen/margin_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grid_layout_additional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/additional_features"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_base"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/menuGridViewAdditional"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:horizontalSpacing="@dimen/margin_1"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="@dimen/margin_1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>